test_suite/ERROR_undefined.out
ERROR_undefined.java: 9:  Semantic Error: Type `B` has not been defined
